--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "oxair",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,7 +17,8 @@
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
-    "reactstrap": "^9.2.2"
+    "reactstrap": "^9.2.2",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "eslint": "^8",
