--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.8.5",
     "react": "^18",
